# Venom-ROS

./: LICENSE  README.md
venom_offb/: CMakeLists.txt  package.xml  venom_key.pub
venom_offb/include/: util.h
venom_offb/include/venom_offb/: Navigator.cpp  Navigator.h
venom_offb/launch/: lpe.launch  sitl.launch
venom_offb/scripts/: circle.py  ping  quaternion.py
venom_offb/src/: circle.cpp  hover.cpp  hunt_cloud.cpp  hunt_servo.cpp  vision_pose_converter.cpp
venom_perception/: CMakeLists.txt  package.xml
venom_perception/config/: view.rviz
venom_perception/include/: Perceiver.h
venom_perception/include/venom_perception/: Zed.cpp  Zed.h
venom_perception/launch/: local_map.launch
venom_perception/samples/: cloud_0.pcd  cloud_100.pcd  cloud_105.pcd  cloud_110.pcd  cloud_115.pcd  cloud_120.pcd  cloud_125.pcd  cloud_130.pcd  cloud_15.pcd  cloud_20.pcd  cloud_25.pcd  cloud_30.pcd  cloud_35.pcd  cloud_40.pcd  cloud_45.pcd  cloud_50.pcd  cloud_55.pcd  cloud_60.pcd  cloud_65.pcd  cloud_70.pcd  cloud_75.pcd  cloud_80.pcd  cloud_85.pcd  cloud_90.pcd  cloud_95.pcd  pose_100.txt  pose_105.txt  pose_110.txt  pose_115.txt  pose_120.txt  pose_125.txt  pose_130.txt  pose_15.txt  pose_20.txt  pose_25.txt  pose_30.txt  pose_35.txt  pose_40.txt  pose_45.txt  pose_5.txt  (+10 more)
venom_perception/scripts/: set_ros_ip.bash  show_box  yolo_detector
venom_perception/src/: depth_map.cpp  detect_cloud.cpp  example.cpp  local_map.cpp  save_zed.cpp
