<?xml version="1.0"?>
<package format="2">
  <name>venom_perception</name>
  <version>0.0.0</version>
  <description>Perception related programs</description>

  <maintainer email="c.yansong@columbia.edu">Yan-Song Chen</maintainer>
  <license>MIT</license>
  <author email="c.yansong@columbia.edu">Yan-Song Chen</author>


  <depend>roscpp</depend>
  <depend>OpenCV</depend>
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>mavros_msgs</depend>
  <depend>pcl_ros</depend>
  <depend>pcl_conversions</depend>
  <depend>sensor_msgs</depend>
  <depend>image_transport</depend>
  <depend>cv_bridge</depend>
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>libpcl-all-dev</build_depend>
  <exec_depend>libpcl-all</exec_depend>


  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
